<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.gov.inci.evaluon.gui.controllers.evaluations.TestPasswordActivity"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
        
        <TextView
            android:layout_weight=".2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_password" />
        
        <LinearLayout
            android:layout_weight=".05"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        
        <EditText
            android:id="@+id/text_password"
            android:layout_weight=".75"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_begin_test" />

</LinearLayout>